Changes to in progress availability mvc refactoring.

--- a/codificacao/src/main/webapp/css/main.css
+++ b/codificacao/src/main/webapp/css/main.css
@@ -120,4 +120,16 @@ table tr td{
     margin: 1px;
 }
 
+.stops-box{
+    display: none;
+    visibility: hidden;
+    flex-direction: row;
+    margin: 1px;
+    justify-content: center;
+}
+
+.day-name{
+    text-align: center;
+    background-color: #1e7e34;
+}
 
