--- a/codificacao/src/main/webapp/css/main.css
+++ b/codificacao/src/main/webapp/css/main.css
@@ -266,10 +266,14 @@ table tr td{
     align-content: center;
 }
 
-
+/*
+.tr-plan-warning{
+    box-shadow: 3px 3px 5px 6px #b2b972;
+}
 #56a3a6
 #484538
 #2e5266
 #dad7cd
 #13293d
 #235789
+*/
