--- a/codificacao/src/main/webapp/css/main.css
+++ b/codificacao/src/main/webapp/css/main.css
@@ -15,6 +15,10 @@ a{
 	outline:none;
 }
 
+li{
+    list-style-type: none;
+}
+
 
 .header{
     position: sticky;
@@ -221,7 +225,7 @@ table tr td{
 
 .main-nav{
     background-color:#13293d;
-    padding: 10px 15px 20px;
+    padding: 10px 15px 32px;
     height: content-box;
     display: flex;
     justify-content: space-between;
@@ -239,8 +243,9 @@ table tr td{
 }
 
 .profile-div{
-    display: inherit;
+    display: flex;
     flex-flow: column;
+    align-items: center;
 }
 
 .table-button-container{
@@ -276,6 +281,43 @@ table tr td{
 
 #log-bt{
     width: 100%;
+}
+
+.ul-nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #13293d;
+}
+
+.li-nav{
+    list-style-type: none;
+    margin-right: 6px;
+}
+
+.a-nav{
+    color: white;
+}
+
+#links-bar{
+    display: none;
+    visibility: hidden;
+}
+
+#links-bar-show{
+    display: inherit;
+    visibility: visible;
+}
+
+#arrow-img-dow{
+    width: 17px;
+    height: 17px;
+}
+
+#arrow-img-up{
+    width: 17px;
+    height: 17px;
+    transform: rotate(180deg);
 }
 
 /*
