--- a/codificacao/src/main/webapp/css/main.css
+++ b/codificacao/src/main/webapp/css/main.css
@@ -66,8 +66,11 @@ li{
 
 
 table tr td{
-    background-color:#dcdcdc;
     padding:10px;
+}
+
+.tr-even{
+    background-color: rgba(144, 141, 131, 0.65);
 }
 
 .tr_destination{
